# Top-Loader-Bot

./: .dockerignore  .gitignore  all_users.txt  docker-compose.yml  pyproject.toml  requirements.txt  session.json  test.py
pgdata/: postmaster.pid
pgdata/base/16384/: 1249  2604
pgdata/global/: 1260  1262  pg_control
pgdata/pg_stat/: db_0.stat  db_16384.stat  global.stat
pgdata/pg_stat_tmp/: global.stat
src/app/: main.py  texts.py
src/app/common/: bot_commands.py  database_backup.py
src/app/common/file/: audio.py  video.py
src/app/core/: config.py
src/app/database/: tables.py
src/app/database/queries/: bots.py  channels.py  users.py
src/app/dialogs/admin_menu/: __init__.py
src/app/handlers/: __init__.py  lang.py  start.py
src/app/handlers/admin/: __init__.py  commands.py
src/app/handlers/user/: commands.py  download_video_audio_music.py  media_downloader.py
src/app/keyboards/: callback_data.py  inline.py
src/app/middleware/: __init__.py  conn.py  language.py
src/app/services/: audio_music_downloaders.py  searchs.py  video_downloaders.py
src/app/services/audio_download/: shazam_function.py
src/app/services/media_downloaders/: all_downloader.py
src/app/services/media_effects/: media_effects.py
src/app/services/utils/: audio.py  files.py  video.py
src/app/services/video_download/: __init__.py  instagram.py  tiktok.py  youtube.py
src/app/states/: admin_states.py  channel.py
translations/en/LC_MESSAGES/: messages.po
translations/ru/LC_MESSAGES/: messages.po
translations/uz/LC_MESSAGES/: messages.po
(+31 files in other folders)
