[project]
name = "downloader-from-social-networks-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "environs>=14.3.0",
    "instagrapi>=2.2.1",
    "pyyaml>=6.0.2",
    "shazamio>=0.8.1",
    "yt-dlp>=2025.8.27",
]
